update gooloom-was with Karts

--- a/gooloom-was/src/main/resources/templates/kart/deleteKartAllForm.html
+++ b/gooloom-was/src/main/resources/templates/kart/deleteKartAllForm.html
@@ -19,8 +19,8 @@
         </div>
         <div class="col">
             <button class="btn btn-primary float-end"
-                    onclick="location.href='items.html'"
-                    th:onclick="|location.href='@{/product/items}'|"
+                    onclick="location.href='karts.html'"
+                    th:onclick="|location.href='@{/kart/karts}'|"
                     type="button">취소
             </button>
         </div>
