--- a/gooloom-was/src/main/resources/templates/kart/addKartForm.html
+++ b/gooloom-was/src/main/resources/templates/kart/addKartForm.html
@@ -19,7 +19,7 @@
 
         <h4 class="mb-3">상품 입력</h4>
 
-        <form action="item.html" th:action method="post">
+        <form action="kart.html" th:action method="post">
             <div>
                 <label for="itemName">상품명</label>
                 <input type="text" id="itemName" name="itemName" class="form-control" placeholder="이름을 입력하세요">
