--- a/gooloom-was/src/main/resources/templates/kart/editKartForm.html
+++ b/gooloom-was/src/main/resources/templates/kart/editKartForm.html
@@ -15,25 +15,25 @@
         <div
                 class="py-5 text-center"> <h2>상품 수정 폼</h2>
         </div>
-        <form action="item.html" th:action method="post">
+        <form action="kart.html" th:action method="post">
             <div>
-                <label for="itemId">상품 ID</label>
-                <input type="text" id="itemId" name="itemId" class="form-control" th:value="${item.itemId}" readonly>
+                <label for="kartId">상품 ID</label>
+                <input type="text" id="kartId" name="kartId" class="form-control" th:value="${kart.kartId}" readonly>
             </div>
 
             <div>
-                <label for="itemName">상품명</label>
-                <input type="text" id="itemName" name="itemName" class="form-control" th:value="${item.itemName}">
+                <label for="kartName">상품명</label>
+                <input type="text" id="kartName" name="kartName" class="form-control" th:value="${kart.kartName}">
             </div>
 
             <div>
-                <label for="itemPrice">상품 가격</label>
-                <input type="text" id="itemPrice" name="itemPrice" class="form-control" th:value="${item.itemPrice}">
+                <label for="kartPrice">상품 가격</label>
+                <input type="text" id="kartPrice" name="kartPrice" class="form-control" th:value="${kart.kartPrice}">
             </div>
 
             <div>
-                <label for="itemQuantity">상품 수량</label>
-                <input type="text" id="itemQuantity" name="itemQuantity" class="form-control" th:value="${item.itemQuantity}">
+                <label for="kartQuantity">상품 수량</label>
+                <input type="text" id="kartQuantity" name="kartQuantity" class="form-control" th:value="${kart.kartQuantity}">
             </div>
             <hr class="my-4">
             <div class="row">
@@ -43,8 +43,8 @@
                 </div>
                 <div class="col">
                     <button class="w-100 btn btn-secondary btn-lg"
-                            onclick="location.href='item.html'"
-                            th:onclick="|location.href='@{/product/items/{itemId}(itemId=${item.itemId})}'|"
+                            onclick="location.href='kart.html'"
+                            th:onclick="|location.href='@{/kart/karts/{kartId}(kartId=${kart.kartId})}'|"
                             type="button">취소</button>
                 </div>
             </div>
