--- a/gooloom-was/src/main/resources/templates/product/items.html
+++ b/gooloom-was/src/main/resources/templates/product/items.html
@@ -28,13 +28,18 @@
         <table class="table">
             <tbody>
             <tr th:each="item : ${items}">
-                <span><img th:src="@{${item.image}}" style="width: 300px; height: 200px;"></span><br>
-                <span><a th:href="@{/product/items/{itemId}(itemId=${item.itemId})}" th:text="${item.itemId}">상품 id</a></span><br>
-                <span><a th:href="@{|/product/items/${item.itemId}|}" th:text="${item.itemName}">상품 이름</a></span><br>
-                <span th:text="${item.itemPrice}">10000</span><br>
-                <span th:text="${item.itemQuantity}">10</span><br>
+                <td>
+                    <img th:src="@{${item.image}}" alt="상품 이미지" style="width: 300px; height: 200px;">
+                </td>
+                <td>
+                    <a th:href="@{/product/items/{itemId}(itemId=${item.itemId})}" th:text="${item.itemId}">상품 id</a>
+                </td>
+                <td>
+                    <a th:href="@{|/product/items/${item.itemId}|}" th:text="${item.itemName}">상품 이름</a>
+                </td>
+                <td th:text="${item.itemPrice}">10000</td>
+                <td th:text="${item.itemQuantity}">10</td>
             </tr>
-
             </tbody>
         </table>
     </div>
