--- a/gooloom-was/src/main/resources/templates/product/items.html
+++ b/gooloom-was/src/main/resources/templates/product/items.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+          href="/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container" style="max-width: 600px">
@@ -11,39 +11,39 @@
         <img src="https://prod-static-s3-bucket-01.s3.ap-northeast-2.amazonaws.com/cgv.png" width="200" height="100"
              alt="CGV">
     </div>
-<div class="container" style="max-width: 600px">
-    <div class="py-5 text-center">
-        <h2>상품 목록</h2></div>
-    <div class="row">
-        <div class="col">
-            <button class="btn btn-primary float-end"
-                    onclick="location.href='index.html'"
-                    th:onclick="|location.href='@{/}'|"
-                    type="button">처음으로
-            </button>
+    <div class="container" style="max-width: 600px">
+        <div class="py-5 text-center">
+            <h2>상품 목록</h2></div>
+        <div class="row">
+            <div class="col">
+                <button class="btn btn-primary float-end"
+                        onclick="location.href='index.html'"
+                        th:onclick="|location.href='@{/}'|"
+                        type="button">처음으로
+                </button>
+            </div>
         </div>
-    </div>
-    <hr class="my-4">
-    <div>
-        <table class="table">
-            <tbody>
-            <tr th:each="item : ${items}">
-                <td>
-                    <img th:src="@{${item.image}}" alt="상품 이미지" style="width: 300px; height: 200px;">
-                </td>
-                <td>
-                    <a th:href="@{/product/items/{itemId}(itemId=${item.itemId})}" th:text="${item.itemId}">상품 id</a>
-                </td>
-                <td>
-                    <a th:href="@{|/product/items/${item.itemId}|}" th:text="${item.itemName}">상품 이름</a>
-                </td>
-                <td th:text="${item.itemPrice}">10000</td>
-                <td th:text="${item.itemQuantity}">10</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-</div> <!-- /container -->
+        <hr class="my-4">
+        <div>
+            <table class="table">
+                <tbody>
+                <tr th:each="item : ${items}">
+                    <td>
+                        <img th:src="@{${item.image}}" alt="상품 이미지" style="width: 300px; height: 200px;">
+                    </td>
+                    <td>
+                        <a th:href="@{/product/items/{itemId}(itemId=${item.itemId})}" th:text="${item.itemId}">상품 id</a>
+                    </td>
+                    <td>
+                        <a th:href="@{|/product/items/${item.itemId}|}" th:text="${item.itemName}">상품 이름</a>
+                    </td>
+                    <td th:text="${item.itemPrice}">10000</td>
+                    <td th:text="${item.itemQuantity}">10</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div> <!-- /container -->
 </div>
 </body>
 </htmlxmlns:th>
