--- a/gooloom-was/src/main/resources/templates/product/item.html
+++ b/gooloom-was/src/main/resources/templates/product/item.html
@@ -67,7 +67,7 @@
             <button class="w-100 btn btn-secondary btn-lg"
                     onclick="location.href='carts.html'"
                     th:onclick="|location.href='@{/cart/myCart}'|"
-                    type="button">장바구니 보러가기</button>
+                    type="button">나의 장바구니</button>
         </div>
     </div>
 </div> <!-- /container -->
